--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --config=.eslintrc.js",
+    "lint-fix": "eslint src --fix --config=.eslintrc.js"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
