--- a/Dockerfile_node
+++ b/Dockerfile_node
@@ -6,17 +6,13 @@ EXPOSE $PORT
 WORKDIR /app
 
 # Make node modules cacheable
-COPY ./yarn.lock ./package.json ./
+COPY ./package.json ./
 
 # Install dependencies
-RUN npm install -g yarn
-RUN yarn install
+RUN yarn install --production=false
 
 
 # Copy code
 COPY . .
-RUN yarn build
-
-# Start the server
 
 CMD ["yarn", "webpack"]
