--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,8 +27,11 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
     "eslint": "^5.5.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -43,9 +45,23 @@
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
+    "react-test-renderer": "^16.6.3",
+    "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/jest/fileMock.js",
+      "\\.scss$": "<rootDir>/jest/styleMock.js"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "\\.svg$": "<rootDir>/jest/svgTransformer.js"
+    }
   }
 }
